# KanTV-downloader-cli

./: .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  bazel_build.sh  bazel_run.sh  deps.bzl  go.mod  go.sum  main.go  release.sh
.github/workflows/: ci.yml
kantv/: BUILD.bazel  commands.go  flags.go  kantv_cli.go
kantv/api/: BUILD.bazel  common.go  country.go  login.go  request.go  video.go
kantv/util/: BUILD.bazel  config.go  file.go  file_test.go  net.go  net_test.go  struct.go
mewx/kantv/: BUILD.bazel  kantv_cli.go  kantv_cli_test.go
mewx/kantv/api/: login.go
old/: main.go
old/mewx/kantv/api/: common.go  request.go
src/main/java/org/mewx/kantv/: Kantv.java
src/main/java/org/mewx/kantv/command/: KantvBase.java  Test.java
src/test/java/org/mewx/kantv/: AllTests.java  KantvTest.java
