load("@rules_java//java:defs.bzl", "java_test")

java_binary(
    name = "kantv",
    srcs = glob(["src/main/java/org/mewx/kantv/*.java"]),
    main_class = "org.mewx.kantv.Kantv",
    deps = [
        ":kantv-lib",
        "@picocli//jar",
    ],
)

java_library(
    name = "kantv-lib",
    srcs = glob(["src/main/java/org/mewx/kantv/*.java"]),
    deps = [
        "@picocli//jar",
    ],
)

java_test(
    name = "kantv_test",
    size = "small",
    srcs = glob(["src/test/java/org/mewx/kantv/*.java"]),
    test_class = "org.mewx.kantv.AllTests",
    deps = [
        "kantv-lib",
        "@hamcrest_all//jar",
        "@junit//jar",
        "@takari_cpsuite//jar",
    ],
)
