load("@rules_java//java:defs.bzl", "java_test")

java_binary(
    name = "kantv",
    srcs = glob(["src/main/java/org/mewx/kantv/**/*.java"]),
    main_class = "org.mewx.kantv.Kantv",
    deps = [
        ":kantv-lib",
	"@maven//:info_picocli_picocli",
    ],
)

java_library(
    name = "kantv-lib",
    srcs = glob(["src/main/java/org/mewx/kantv/**/*.java"]),
    deps = [
	"@maven//:info_picocli_picocli",
    ],
)

java_test(
    name = "kantv_test",
    size = "small",
    srcs = glob(["src/test/java/org/mewx/kantv/*.java"]),
    test_class = "org.mewx.kantv.AllTests",
    deps = [
        "kantv-lib",
	"@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_all",
        "@maven//:io_takari_junit_takari_cpsuite_jar",
    ],
)
