load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "flags.go",
        "kantv_cli.go",
    ],
    importpath = "github.com/MewX/KanTV-downloader-cli/kantv",
    visibility = ["//visibility:public"],
    deps = [
        "//kantv/api:go_default_library",
        "//kantv/util:go_default_library",
        "@m3u8//:go_default_library",
        "@urfav_cli//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["kantv_cli_test.go"],
    embed = [":go_default_library"],
)
