load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "country.go",
        "login.go",
        "request.go",
        "video.go",
    ],
    importpath = "github.com/MewX/KanTV-downloader-cli/kantv/api",
    visibility = ["//visibility:public"],
    deps = [
        "//kantv/util:go_default_library",
    ],
)
