load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "net.go",
        "struct.go",
    ],
    importpath = "github.com/MewX/KanTV-downloader-cli/kantv/util",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["net_test.go"],
    embed = [":go_default_library"],
)
